# WHRS-ORC

./: .gitignore  AGENTS.md  CALCULATION_BASIS.md  CHANGELOG.md  CONTINUITY.md  DOMAIN_MODEL.md  EQUIPMENT_CONTRACTS.md  EXHAUST_BOILER_CODE_READY_SPEC.md  PROJECT_PLAN.md  README.md  RESULT_SCHEMA.md  SESSION_HANDOFF.md  SYSTEM_ARCHITECTURE.md  TEST_STRATEGY.md  ToDo.md  VALIDATION_RULES.md  app.py  pyproject.toml
data/fluids/: exhaust_components.json  thermal_oils.json
skills/whrs-orc-architect/: SKILL.md
skills/whrs-orc-architect/agents/: openai.yaml
skills/whrs-orc-thermal-calculation-guardian/: SKILL.md
skills/whrs-orc-thermal-calculation-guardian/agents/: openai.yaml
src/whrs_orc/: __init__.py
src/whrs_orc/domain/: __init__.py  models.py  result_schema.py
src/whrs_orc/equipment/: __init__.py  contracts.py  exhaust_source.py  orc_screening_heat_uptake.py  orc_screening_power.py  thermal_oil_loop.py  waste_heat_boiler.py
src/whrs_orc/logging/: __init__.py  run_logger.py
src/whrs_orc/persistence/: __init__.py  saved_cases.py
src/whrs_orc/properties/: __init__.py  catalog.py  exhaust_properties.py  (+2 more)
tests/: test_benchmark_cases.py  test_diagram_units.py  test_equipment_details.py  test_exhaust_source.py  test_operator_guidance.py  test_orc_screening.py  test_process_diagram.py  test_result_schema.py  test_run_logger.py  test_saved_cases.py  test_screening_case.py  test_screening_report.py  test_stream_motion.py  test_stream_palette.py  test_thermal_oil_loop.py  test_ui_view_model.py  test_validation_rules.py  test_waste_heat_boiler.py
(+16 files in other folders)
